# computer-organization-study-assistant

./: .gitignore  FIX_PLAN.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows-release.yml
data/: seed.json  seed_questions.json
docs/: database-design.md  product-plan.md  roadmap.md
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: chapter.rs  import.rs  mod.rs  practice.rs  reset.rs  stats.rs  task.rs
src-tauri/windows/: hooks.nsh
src/components/: ErrorBoundary.tsx
src/components/layout/: Sidebar.css  Sidebar.tsx
src/components/overview/: ChapterProgress.css  ChapterProgress.tsx  MetricGrid.css  MetricGrid.tsx
src/components/practice/: TaskCard.css  TaskCard.tsx
src/contexts/: AppContext.tsx
src/hooks/: useChapters.ts  usePracticeMode.ts  useStats.ts  useTaskDetail.ts  useTasks.ts
src/services/: api.ts  cache.ts
