[package]
name = "computer-organization-study-assistant"
version = "0.3.0"
description = "面向计算机组成原理课程的 Windows 桌面学习与训练系统"
authors = ["fanrenxiuluo-sudo"]
edition = "2021"

[lib]
name = "computer_organization_study_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

